Initial commit of all converted Instruqt files

--- a/content/modules/ROOT/pages/index.adoc
+++ b/content/modules/ROOT/pages/index.adoc
@@ -1,51 +1,61 @@
-= {lab_name}
+== What is Extended Update Support (EUS)?
 
-The `lab_name` var, known as an asciidoc attribute, above was set in `./content/antora.yml` and can be used to set the lab_name or title of your content.
-You are both free to change its value and if you prefer to use a different var name, you can change the value of `lab_name`, for example to `title` in `./content/antora.yml` and then reference it in your content as `\{title}`.
-me
+EUS is an optional offering for Red Hat Enterprise Linux (RHEL)
+subscribers. With Extended Update Support, Red Hat provides backports of
+Critical and Important impact security updates and urgent-priority bug
+fixes for a predefined set of minor releases of Red Hat Enterprise
+Linux. EUS enables customers to remain with the same minor release of
+Red Hat Enterprise Linux for 24 months, allowing for stable production
+environments for mission-critical applications.
 
-== Variables
+== Why would you use EUS?
 
-Other vars can also be set there, such as `ssh_user` and `ssh_password`, and referenced inline in the lab content by using the `\{foo}` syntax.
+Traditional systems administration logic suggests that one would upgrade
+to the latest release as it becomes available. However, certain
+workloads or environments may require a more static environment while
+still maintaining vendor support:
 
-This is another var, or asciidoc attribute, from `./content/antora.yml` {my_var}
+* Some sensitive production workloads may require minimal infrastructure
+changes.
+* Some organizations require the entire application stack be certified
+with every minor release
+* Certain independent software vendors (ISVs) may only certify specific
+RHEL minor releases.
 
-== Writing your lab
+Red Hat’s EUS program enables partners and customers alike to
+standardize on specific minor versions without the need for orbitrary
+decisions. Since RHEL 4.5, Red Hat Enterprise Linux has provided EUS.
+Since RHEL 8.0, the standard for EUS releases is to support *.0 and
+every even numbered release. (This policy has been upheld for RHEL 9.x
+as well.)
 
-Whatever type of content you are writing we'll refer to your *content* as "your lab" in this document.
+.rhel8_lifecycle
+image::rhel8_lifecycle.png[rhel8_lifecycle]
 
-=== Lab structure
+== Verifying Extended Update Support Availability
 
+Extended Update Support is an offering and therefore requires a
+subscription to enable the expected functionality. From the OS level,
+you are able to determine whether a system has the EUS add-on available:
 
-Wether you are writing a lab
+....
+subscription-manager repos | grep -i eus
+....
 
-* First, we will build a monolithic application already compiled as RPM packages and put it into a container. This will allow us to deploy the application, copy it between machines, and update it separately from the operating system. This process affords us a portable and easily maintained component instead of tightly coupling the application with your operating system maintenance.
-
-* In closing we will build a second container on a different operating system version that makes an application not packaged into RPMs. This will be similar to a web application deployment, positioning the correct files at the right locations. To do this, we will pull a project from GitHub and position the component files within our container image. The purpose of this is to achieve a portable application container that can deploy on several different versions of Red Hat Enterprise Linux. This also provides the benefit of decoupling your application maintenance, which would all happen by building new containers versus operating system maintenance. The container is no longer reliant on the operating system installed on the machine where the application is deployed.
-
-
-. Now let's examine this cluster a bit more by describing the cluster (the `$GUID` environment variable is already set for you so you can immediately describe your individual cluster):
-+
-[source,sh,role=execute]
+[source,bash]
 ----
-podman ps
+# subscription-manager repos | grep -i eus
+Repo ID:   codeready-builder-for-rhel-8-x86_64-eus-debug-rpms
+Repo URL:  https://cdn.redhat.com/content/eus/rhel8/$releasever/x86_64/codeready-builder/debug
+Repo ID:   rhel-8-for-x86_64-baseos-eus-debug-rpms
+Repo URL:  https://cdn.redhat.com/content/eus/rhel8/$releasever/x86_64/baseos/debug
+... Output Truncated ...
+Repo ID:   rhel-8-for-x86_64-baseos-eus-rpms
+Repo URL:  https://cdn.redhat.com/content/eus/rhel8/$releasever/x86_64/baseos/os
+Repo ID:   rhel-8-for-x86_64-appstream-eus-rpms
+Repo URL:  https://cdn.redhat.com/content/eus/rhel8/$releasever/x86_64/appstream/os
+... Output Truncated ...
 ----
-+
-.Sample Output
-[source,texinfo,subs="attributes"]
-----
-CONTAINER ID  IMAGE                        COMMAND           CREATED      STATUS      PORTS                 NAMES
-2dcfee9e50c4  docker.io/library/httpd:2.4  httpd-foreground  3 hours ago  Up 3 hours  0.0.0.0:8080->80/tcp  showroom-httpd
-----
 
-
-
-
-
-
-
-
-=== Lab Access
-
-The terminal window to your right is *already* logged into the lab environment as the `{ssh_user}` user via `ssh`. 
-All steps of this lab are to be completed as the `{ssh_user}` user.
+In the following steps, you will look at how to register your system
+with EUS and upgrade inbetween EUS releases.
