Update content from Instruqt for eus_intro

--- a/content/modules/ROOT/pages/index.adoc
+++ b/content/modules/ROOT/pages/index.adoc
@@ -29,8 +29,8 @@ Since RHEL 8.0, the standard for EUS releases is to support *.0 and
 every even numbered release. (This policy has been upheld for RHEL 9.x
 as well.)
 
-.rhel8_lifecycle
-image::rhel8_lifecycle.png[rhel8_lifecycle]
+.rhel9_lifecycle.png
+image::rhel9_lifecycle.png[rhel9_lifecycle.png]
 
 == Verifying Extended Update Support Availability
 
@@ -42,20 +42,12 @@ you are able to determine whether a system has the EUS add-on available:
 subscription-manager repos | grep -i eus
 ....
 
-[source,bash]
-----
-# subscription-manager repos | grep -i eus
-Repo ID:   codeready-builder-for-rhel-8-x86_64-eus-debug-rpms
-Repo URL:  https://cdn.redhat.com/content/eus/rhel8/$releasever/x86_64/codeready-builder/debug
-Repo ID:   rhel-8-for-x86_64-baseos-eus-debug-rpms
-Repo URL:  https://cdn.redhat.com/content/eus/rhel8/$releasever/x86_64/baseos/debug
-... Output Truncated ...
-Repo ID:   rhel-8-for-x86_64-baseos-eus-rpms
-Repo URL:  https://cdn.redhat.com/content/eus/rhel8/$releasever/x86_64/baseos/os
-Repo ID:   rhel-8-for-x86_64-appstream-eus-rpms
-Repo URL:  https://cdn.redhat.com/content/eus/rhel8/$releasever/x86_64/appstream/os
-... Output Truncated ...
-----
-
 In the following steps, you will look at how to register your system
-with EUS and upgrade inbetween EUS releases.
+with EUS and upgrade inbetween EUS releases. However, before you
+subscribe your system to an EUS release, it is important to note which
+release your system is running. This information is stored in the file
+`/etc/redhat-release`
+
+....
+cat /etc/redhat-release
+....
