--- a/content/modules/ROOT/pages/module-03.adoc
+++ b/content/modules/ROOT/pages/module-03.adoc
@@ -1,41 +1,46 @@
-Now that your system has the EUS repositories registered, query your
-system to see how many packages are available for update. (This will be
-important to note in the next step.)
+While EUS versions are supported for 24 months, it is a good practice to
+stay on as current a release as possible. However, some environments
+require recertification or are running software that the vendor only
+certifies for specific minor releases of Red Hat Enterprise Linux. In
+those circumstances, upgrading between EUS releases is the necessary
+balance.
+
+In order to see which releases are available for your system’s current
+major release, you will use the `subscription-manager` command:
 
 ....
+subscription-manager release --list
+....
+
+Before you upgrade to the lastest minor EUS release, it is worth noting
+that checks are built-in to ensure a system doesn’t inadvertantly get
+updated to the absolute latest release. For instance, RHEL 9.3 is the
+current minor release but is _not_ an EUS release. Try setting 9.3 as
+the current release:
+
+....
+subscription-manager release --set=9.3
+dnf clean all
 dnf list --updates| wc -l
 ....
 
-[source,bash]
-----
-# dnf list --updates| wc -l
-43
-----
-
-It is now time to update to the latest packages in our EUS release.
-Before proceeding with the update, it is usually advisable to clean the
-DNF cache as it removes existing metadata and pulls down an updated
-listing for the new repositories.
+You receive several errors indicating the requested content could not be
+found. Now, select the correct release and verify there are packages
+available for update:
 
 ....
+subscription-manager release --set=9.0
 dnf clean all
+dnf list --updates| wc -l
+....
+
+Update your system to the latest packages in this EUS release:
+
+....
 dnf update -y
 ....
 
 Note: Your system’s output may vary slightly from the example:
-
-[source,bash]
-----
-# dnf clean all
-Updating Subscription Management repositories.
-34 files removed
-
-Updating Subscription Management repositories.
-Red Hat Enterprise Linux 8 for x86_64 - AppStream(RPMs)       53 MB/s |  45 MB     00:00
-Red Hat Enterprise Linux 8 for x86_64 - AppStream - Extended Update Support (RPMs)
-... Output Truncated ...
-Complete!
-----
 
 Now that you have the lastest packages availble in this EUS
 repositories, verify the minor version of RHEL is the same as Step 2:
@@ -44,11 +49,6 @@ repositories, verify the minor version of RHEL is the same as Step 2:
 cat /etc/redhat-release
 ....
 
-[source,bash]
-----
-Red Hat Enterprise Linux release 8.4 (Ootpa)
-----
-
 Notice that with all the latest available packages installed, the server
-is still running RHEL 8.4. There is a newer EUS release available. In
+is still running RHEL 9.0. There is a newer EUS release available. In
 the final step, you will see how to upgrade between EUS versions.
