--- a/content/modules/ROOT/pages/module-02.adoc
+++ b/content/modules/ROOT/pages/module-02.adoc
@@ -1,35 +1,22 @@
-== Preparing a system for EUS
-
-Before you subscribe your system to an EUS release, it is important to
-note which release your system is running. This information is stored in
-the file `+/etc/redhat-release+`
-
-....
-cat /etc/redhat-release
-....
-
-[source,bash]
-----
-Red Hat Enterprise Linux release 8.4 (Ootpa)
-----
-
 At this point, your system is not configured for EUS. If you were to run
-a `+dnf update+` with this configuration, no packages would be available
-because the standard 8.4 repositories are no longer live.
+a `dnf update` with this configuration, you’d update to the latest
+version of RHEL 9. Since the standard 9.0 repositories are no longer
+live, you’ll need to follow a couple extra steps, but first get an
+estimate of how many packages are available for update. This will be
+helpful to note for the remainder of this lab:
 
 ....
-dnf list --updates
+dnf list --updates| wc -l
 ....
 
-[source,bash]
-----
-# dnf list --updates
-Updating Subscription Management repositories.
-Last metadata expiration check: 0:00:17 ago on Thu 15 Dec 2022 11:29:05 PM UTC.
-----
+The command above outputs a list of updates dnf finds then ``pipes'' it
+through the ``word count'' command to count the number of lines, giving
+you a rough estimate of the number of packages available. The command
+above tells you that to go from RHEL 9.0 proper to 9.3 latest will
+install about 393 new or updated packages.
 
-In order to restore your system to a patchable state, you will need to
-disable the standard repositories and enable the EUS-specific repos.
+First, you will need to disable the standard repositories and enable the
+EUS-specific repos.
 
 *Please note:* There are TWO repos that need to be unregistered. The
 baseos repo consists of all the packages essential for supporting the
@@ -39,32 +26,17 @@ language libraries and databases. You will then re-register the EUS
 version of these repositories.
 
 ....
-subscription-manager repos --disable rhel-8-for-x86_64-baseos-rpms
-subscription-manager repos --disable rhel-8-for-x86_64-appstream-rpms
+ subscription-manager repos --disable rhel-9-for-x86_64-baseos-rpms
+ subscription-manager repos --disable rhel-9-for-x86_64-appstream-rpms
 ....
-
-[source,bash]
-----
-# subscription-manager repos --disable rhel-8-for-x86_64-baseos-rpms
-Repository 'rhel-8-for-x86_64-baseos-rpms' is disabled for this system.
-# subscription-manager repos --disable rhel-8-for-x86_64-appstream-rpms
-Repository 'rhel-8-for-x86_64-appstream-rpms' is disabled for this system.
-----
 
 Next, enable the EUS repositories.
 
 *Pro Tip*: You can combine these two operations into a single command!
 
 ....
-subscription-manager repos --enable rhel-8-for-x86_64-baseos-eus-rpms --enable rhel-8-for-x86_64-appstream-eus-rpms
+subscription-manager repos --enable rhel-9-for-x86_64-baseos-eus-rpms --enable rhel-9-for-x86_64-appstream-eus-rpms
 ....
-
-[source,bash]
-----
-# subscription-manager repos --enable rhel-8-for-x86_64-baseos-eus-rpms --enable rhel-8-for-x86_64-appstream-eus-rpms
-Repository 'rhel-8-for-x86_64-baseos-eus-rpms' is enabled for this system.
-Repository 'rhel-8-for-x86_64-appstream-eus-rpms' is enabled for this system.
-----
 
 Now that your system has the EUS repositories enabled, in the next step,
 you will actually go through the process of updating packages from the
